-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8-shenandoah, 11-shenandoah, 12, 13
-
Component/s: hotspot
-
b05
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8218665 | 12.0.2 | Zhengyu Gu | P4 | Resolved | Fixed | b01 |
shenandoahTaskQueue.hpp includes the taskqueue.inline.hpp file. We should not include .inline.hpp files in .hpp files.
Fix this.
Fix this.
- backported by
-
JDK-8218665 shenandoahTaskQueue.hpp includes .inline.hpp file
-
- Resolved
-
- relates to
-
JDK-8217203 Some more includes to .inline.hpp files in gc header files
-
- Resolved
-