8217213: shenandoahTaskQueue.hpp includes .inline.hpp file

Reviewed-by: shade, tschatzl